[package]
name = "drfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = ">=5.4.1"
serialport = ">4.0"
futures = ">=0.3"
serial = ">=0.4.0"
predicates = ">=1.0.0"
tokio-util = "0.7.10"
chrono = "0.4.34"
termion = "3.0.0"
